Fix bug where escape would function as an alt key

--- a/home/.tmux.conf
+++ b/home/.tmux.conf
@@ -32,3 +32,6 @@ bind r source-file ~/.tmux.conf
 
 # highlight active window title
 setw -g window-status-current-style fg=black,bg=white
+
+# get rid of ugly escape bug
+set-option -s escape-time 0
